--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ body
 {
     font-family: 'Raleway', sans-serif;
     font-size: 13px;
-    margin-left: 25px;
-    margin-right: 25px;
+    max-width: 1440px;
+    margin-left: 25px;    
 }
 a
 {
@@ -12,11 +12,12 @@ a
 }
 header
 {
-    display: flex;
-    flex-direction: row;
-    max-width: 1440px;
+    display: grid;
+    grid-template-columns: 1fr 200px 200px 200px; 
+    /*max-width: 1440px;*/
     width: 100%;
     justify-content: space-between;
+    
     
 }
 .logo
@@ -26,40 +27,61 @@ header
     
    
 }
-.navbar
-{
-    display: flex;
-    
-}
+
 .inscrire
 {
-    float: right;
+   
     margin-right: 2rem;
     color: #0065FC;
-   
-    
-    padding-top: 50px;
+    padding:50px 3rem 0 3rem;
     border-top: 2px solid #F2F2F2;
+}
+.inscrire:hover
+{
+    color: #0065FC;
+    font-weight: bold;
+    border-color: #0065FC;
 }
 .nav1
 {
     
     list-style-type: none;
-    margin-right: 5rem;
-    padding-top: 50px;
+    padding:50px 3rem 0 3rem;
     border-top: 2px solid #F2F2F2;
-    
-    
+   
+}
+.nav1:hover
+{
+    color: #0065FC;
+    font-weight: bold;
+    border-color: #0065FC;
+}
+.nav1[data-active=true]
+{
+    color: #0065FC;
+    border-color: #0065FC;
+    font-weight: bold;
 }
 .nav2
 {
-    float: right;
+   
     list-style-type: none;
-    margin-right: 5rem;
-    padding-top: 50px;
-    border-top: 2px solid #F2F2F2;
-    
+    padding:50px 0 0 4rem;
+    border-top: 2px solid #F2F2F2;    
 }
+.nav2:hover
+{
+    color: #0065FC;
+    font-weight: bold;
+    border-color: #0065FC;
+}
+.nav2[data-active=true]
+{
+    color: #0065FC;
+    border-color: #0065FC;
+    font-weight: bold;
+}
+
 .h1entete
 {
     font-size: 0.99rem;
@@ -67,11 +89,12 @@ header
 .searchbar
 {
     display: flex;
+    
 }
 .MapMarker
 {
     background-color: #F2F2F2;
-    padding: 1rem 1.25rem;
+    padding: 1.2rem 1.25rem 1rem 1.25rem;
     border-radius: 1rem 0 0 1rem;
     text-align: center;
 }
@@ -88,19 +111,25 @@ header
     font-weight: bold;
     font-family: "Raleway", "Sans serif";
 }
-
-.button 
+.formulaire
+{
+    display: inline-flex;
+}
+.button
 {
     background-color: #0065FC;
     color: white;
     font-weight: bold;
     border: none;
     border-radius: 0 1rem 1rem 0;
-    padding: 0 1.5rem;
     font-family: "Raleway", "Sans serif";
     font-size: 1rem;
     cursor: pointer;
-    padding: 1rem 1.25rem;
+    padding: 1.2rem 1.25rem 1rem 1.25rem;
+}
+.SearchIcon
+{
+    display: none;
 }
 .filter 
 {
@@ -124,14 +153,17 @@ header
     cursor: pointer;
     transition-duration: 0.1s;
     font-weight: bold;
+    
 }
 .f:hover
 {
     background-color: #deebff;
+    border: 3px;
+    box-shadow: 0 3px 5px #c9caccd2;
 }
 .FilterIcons1
 {
-    padding: 0.5rem;
+    padding: 0.7rem;
     border-radius: 1rem;
     background-color: #deebff;
     color: #0065FC;
@@ -139,7 +171,7 @@ header
 }
 .FilterIcons2
 {
-    padding: 0.5rem 0.7rem;
+    padding: 0.7rem 0.9rem;
     border-radius: 1rem;
     background-color: #deebff;
     color: #0065FC;
@@ -147,7 +179,7 @@ header
 }
 .FilterIcons3
 {
-    padding: 0.5rem;
+    padding: 0.7rem;
     border-radius: 1rem;
     background-color: #deebff;
     color: #0065FC;
@@ -155,7 +187,7 @@ header
 }
 .FilterIcons4
 {
-    padding: 0.5rem;
+    padding: 0.7rem;
     border-radius: 1rem;
     background-color: #deebff;
     color: #0065FC;
@@ -164,6 +196,7 @@ header
 .Textf
 {
     padding: 0 0.5rem;
+    font-size: 0.9rem;
     font-weight: bold;
 }
 .InformationIcon
@@ -175,8 +208,8 @@ header
 {
     display: flex;
     flex-direction: row;
-    width: 1440px;
-    height: 630px;
+    width: 100%;
+    height: auto;
     justify-content: space-around;
 }   
 .t1
@@ -194,6 +227,7 @@ header
     width: 880px;
     height: 625px;
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
     border-radius: 16px;
     justify-content: space-around;
@@ -285,7 +319,6 @@ header
 {
     display: inline-flex;
     flex-wrap: wrap;
-    text-align: left;
     width: 100%;
     min-width: 300px;
     padding-right: 400px;
@@ -296,8 +329,9 @@ header
 }
 .StarsIcon
 {
-    display: block;
+    
     margin-bottom: 5px;
+    
       
 }
 .StarsIconFull
@@ -317,8 +351,7 @@ header
     height: 625px;
     border-radius: 16px;
     justify-content: space-around;
-    margin: 35px ;
-    padding-top: 9px;
+    margin:15px 35px 0 0;
 }
 .populaires
 {
@@ -334,8 +367,8 @@ header
 }
 .imgp
 {
-    width: 126px;
-    height: 135px;
+    width: 40%;
+    height: auto;
     border-radius: 14px 0 0 14px;
     margin: 5px 5px 5px 5px;
 }
@@ -343,78 +376,19 @@ header
 {
    display: flex;
    flex-direction: column;
+   margin: 5px;
+   width: 60%;
 }
-@media screen and (max-width: 1050px)
-{   .part1
-    {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        height: auto;
-        justify-content: space-around;
-       
-        margin-top: 20px;
-    
-    }
-    .menu1
-    {
-        width: 100%;
-        height: auto;
-    }
-    .hebergement
-    {
-        margin-bottom: 20px;
-    }
-    .menu2
-    {
-        background-color: #f2f2f2;
-        display: flex;
-        flex-direction: row;
-        width: 100%;
-        height: auto;
-        border-radius: 16px;
-        justify-content: space-around;
-        margin-left: 0px;
-    }
-    .populaires
-    {
-        display: flex;
-        flex-direction: column;
-        width: 245px;
-        height: 200px;
-        border-radius: 18px;
-        background-color: #FFFFFF;
-        padding-bottom: 10px;
-        box-shadow: 0 3px 5px #c9caccd2;
-        margin-top: 15px;
-        margin-bottom: 15px;
-        margin-left: 0;
-        margin-right: 0;
-    }
-    .imgp
-    {
-        width: 245px;
-        height: 40%;
-        border-radius: 13px 13px 0 0;
-        margin: 5px; 
-    }
-    .PopulairesTitle
-    {
-        font-size: 0.9rem;
-    }
-    .infop
-    {
-        margin-left: 15px;
-        margin-top: 0;
-        font-size: 0.9rem;   
-    }
+.PopulairesTitle
+{
+    margin: 0px;
 }
 .Activite
 {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    max-width: 1440px;
+    /*max-width: 1440px;*/
     height: auto;
     justify-content: space-around;
 }
@@ -566,12 +540,13 @@ footer
 {
     background-color: #F2F2F2;
     width: 100%;
-    max-width: 1440px;
-    height: 220px;
+    /*max-width: 1440px;*/
+    height: auto;
     display: flex;
     justify-content: space-around;
     margin-top: 3rem;
     padding-top: 2rem;
+    padding-bottom: 50px;
 }
 .liFooter
 {
@@ -589,4 +564,355 @@ footer
 .Apropos
 {
     text-align: left;
+}
+@media screen and (max-width: 1401px)
+{   .part1
+    {
+        display: flex;
+        flex-direction: column-reverse;
+        width: 100%;
+        height: auto;
+        justify-content: space-around;
+       
+        margin-top: 20px;
+    
+    }
+    .t1
+    {
+        width: 100%;
+    }
+    .menu1
+    {
+        width: 100%;
+        height: auto;
+    }
+    .hebergement
+    {
+        margin: 20px;
+
+    }
+    .menu2
+    {
+        background-color: #f2f2f2;
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        height: auto;
+        border-radius: 16px;
+        justify-content: space-around;
+        margin-left: 0px;
+    }
+    .populaires
+    {
+        display: flex;
+        flex-direction: column;
+        width: 245px;
+        height: 200px;
+        border-radius: 18px;
+        background-color: #FFFFFF;
+        padding-bottom: 10px;
+        box-shadow: 0 3px 5px #c9caccd2;
+        margin-top: 15px;
+        margin-bottom: 15px;
+        margin-left: 0;
+        margin-right: 0;
+    }
+    .imgp
+    {
+        width: 245px;
+        height: 45%;
+        border-radius: 13px 13px 0 0;
+        margin: 5px; 
+    }
+    .PopulairesTitle
+    {
+        font-size: 0.9rem;
+        margin: 0;
+    }
+    .infop
+    {
+        font-size: 0.9rem;  
+        width: 100%;
+        height: 40%; 
+    }
+    .AfficherPlusLink
+    {
+        text-align: center;
+        margin: 0;
+        padding: 20px 0 20px 180px;
+        width: 100%;
+    }
+}
+@media screen and (max-width: 730px)
+{
+    .TitreActivite
+    {
+        text-align: center;
+        padding: 0;
+    }
+    .act1
+    {
+        width: 300px;
+        height: 165px;
+        border-radius: 1rem;
+        display: flex;
+        box-shadow: 0 3px 5px #c9caccd2;
+        margin: 20px;
+    }
+    .VieuxPort
+    {
+        width: 300px;
+        height: 110px;
+        border-radius: 1rem 1rem 0 0; 
+    }
+    .act2
+    {
+        width: 300px;
+        height: 165px;
+        border-radius: 1rem;
+        display: flex;
+        box-shadow: 0 3px 5px #c9caccd2;
+        margin: 20px;
+    }
+    .Pomegues
+    {
+        width: 300px;
+        height: 110px;
+        border-radius: 1rem 1rem 0 0; 
+    }
+    .act4
+    {
+        width: 300px;
+        height: 165px;
+        border-radius: 1rem;
+        display: flex;
+        box-shadow: 0 3px 5px #c9caccd2;
+        margin: 20px;
+    }
+    .ParcCalanques
+    {
+        width: 300px;
+        height: 110px;
+        border-radius: 1rem 1rem 0 0; 
+    }
+    .act5
+    {
+        width: 300px;
+        height: 165px;
+        border-radius: 1rem;
+        display: flex;
+        box-shadow: 0 3px 5px #c9caccd2;
+        margin: 20px;
+    }
+    .NotreDame
+    {
+        width: 300px;
+        height: 110px;
+        border-radius: 1rem 1rem 0 0; 
+    }
+    .act6
+    {
+        width: 300px;
+        height: 165px;
+        border-radius: 1rem;
+        display: flex;
+        box-shadow: 0 3px 5px #c9caccd2;
+        margin: 20px;
+    }
+    .ParcLongchamp
+    {
+        width: 300px;
+        height: 110px;
+        border-radius: 1rem 1rem 0 0; 
+    }
+
+}
+@media screen and (max-width: 700px)
+{
+    header
+    {
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 1fr 40px;
+    }
+    .logo
+    {
+        grid-column-start: 1;
+        grid-row-start: 1;
+    }
+    .inscrire
+    {
+        grid-column-start: 2;
+        grid-row-start: 1;
+        border-top: none;
+        text-align: right;
+    }
+    .nav1
+    {
+        grid-column-start: 1;
+        grid-row-start: 2;
+        border-top: none;
+        padding: 10px 30% 10px 30%;
+        border-bottom: 2px solid #F2F2F2;
+    }
+    .nav2
+    {
+        grid-column-start: 2;
+        grid-row-start: 2;
+        border-top: none;
+        padding: 10px 30% 10px 40%;
+        border-bottom: 2px solid #F2F2F2;
+    }
+}
+
+@media screen and (max-width: 600px)
+{
+    
+    .menu1
+    {
+        background-color: #FFFFFF;
+    }
+    .t1
+    {
+        text-align: center;
+        margin: 0;
+        padding: 30px 0;
+    }
+    .hebergement
+    {
+        width: 300px;
+        
+    }
+    .imgh
+    {
+        width: 290px;
+    }
+    .populaires
+    {
+        display: flex;
+        flex-direction: row;
+        width: 300px;
+        height: 145px;
+        background-color: #FFFFFF;
+        border-radius: 17px;
+        padding-bottom: 0;
+        box-shadow: 0 3px 5px #c9caccd2;
+    }
+    .imgp
+    {
+    width: 40%;
+    height: auto;
+    border-radius: 14px 0 0 14px;
+    margin: 5px 5px 5px 5px;
+    }
+    .infop
+    {
+    display: flex;
+    flex-direction: column;
+    margin: 5px;
+    width: 60%;
+    }
+    .Rechercher
+    {
+        display: none;
+    }
+    .searchbar
+    {
+        justify-content: center;
+    }
+    .SearchIcon
+    {
+        display: inherit;  
+    }
+}
+@media screen and (max-width: 730px)
+{
+    .TitreActivite
+    {
+        text-align: center;
+        padding: 0;
+    }
+    .act1
+    {
+        width: 300px;
+        height: 165px;
+        border-radius: 1rem;
+        display: flex;
+        box-shadow: 0 3px 5px #c9caccd2;
+        margin: 20px;
+    }
+    .VieuxPort
+    {
+        width: 300px;
+        height: 110px;
+        border-radius: 1rem 1rem 0 0; 
+    }
+    .act2
+    {
+        width: 300px;
+        height: 165px;
+        border-radius: 1rem;
+        display: flex;
+        box-shadow: 0 3px 5px #c9caccd2;
+        margin: 20px;
+    }
+    .Pomegues
+    {
+        width: 300px;
+        height: 110px;
+        border-radius: 1rem 1rem 0 0; 
+    }
+    .act4
+    {
+        width: 300px;
+        height: 165px;
+        border-radius: 1rem;
+        display: flex;
+        box-shadow: 0 3px 5px #c9caccd2;
+        margin: 20px;
+    }
+    .ParcCalanques
+    {
+        width: 300px;
+        height: 110px;
+        border-radius: 1rem 1rem 0 0; 
+    }
+    .act5
+    {
+        width: 300px;
+        height: 165px;
+        border-radius: 1rem;
+        display: flex;
+        box-shadow: 0 3px 5px #c9caccd2;
+        margin: 20px;
+    }
+    .NotreDame
+    {
+        width: 300px;
+        height: 110px;
+        border-radius: 1rem 1rem 0 0; 
+    }
+    .act6
+    {
+        width: 300px;
+        height: 165px;
+        border-radius: 1rem;
+        display: flex;
+        box-shadow: 0 3px 5px #c9caccd2;
+        margin: 20px;
+    }
+    .ParcLongchamp
+    {
+        width: 300px;
+        height: 110px;
+        border-radius: 1rem 1rem 0 0; 
+    }
+
+}
+@media screen and (max-width: 750px)
+{
+    footer
+    {
+        flex-direction: column;
+    }
 }
