--- a/style.css
+++ b/style.css
@@ -341,7 +341,9 @@ header
 }
 .t1-populaire
 {
-    margin-left: 0px;
+    text-align: center;
+    margin-left: 0;
+    width: 100%;
 }
 .populaires
 {
